--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: Srdnlen                         # the main title
 tagline: UniCa CTF Team   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  Srdnlen, UniCa Capture The Flag Team.
+  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
@@ -44,7 +44,6 @@ social:
     # The first element serves as the copyright owner's link
     - https://twitter.com/srdnlen      # change to your twitter homepage
     - https://github.com/srdnlen       # change to your github homepage
-    - https://instagram.com/srdnlen
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
