--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ github:
 twitter:
   username: srdnlen            # change to your twitter username
 
+instagram:
+  username: srdnlen
+
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
@@ -44,6 +47,7 @@ social:
     # The first element serves as the copyright owner's link
     - https://twitter.com/srdnlen      # change to your twitter homepage
     - https://github.com/srdnlen       # change to your github homepage
+    - https://instagram.com/srdnlen
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
